# MLDS6project

./: README.md  pyproject.toml
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
scripts/data_acquisition/: main.py
scripts/eda/: main.py
scripts/evaluation/: main.py
scripts/preprocessing/: main.py
scripts/training/: mainModel_Proyecto_Unidad_6.ipynb
src/plant_pathology/: Dockerfile  README.md
src/plant_pathology/model/: model.pkl
