[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "plant_pathology"
version = "0.1.0"
authors = [{name = "ByJimmymoto", email = "jimmymoto26@gmail.com"}]
description = "Proyecto de prediccion de patologias de plantas de manzano"
requires-python = ">3.6"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src/plant_pathology"]
